# wasm-webgl-country-road

./: README.md  workspace.code-workspace
rust/: Cargo.toml  Makefile
rust/src/: lib.rs
rust/src/twgl/: const.rs  mod.rs  program.rs
svelte/: package-lock.json  package.json  svelte.config.js
svelte/src/: app.css  app.html
svelte/src/lib/webgl/: fragment_shader.glsl  vertex_shader.glsl
svelte/src/routes/: index.svelte  wasm.svelte
